infra/templates/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-soat-tech-challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: fiap-soat-tech-challenge-product-api-app
                port:
                  number: 8080

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: fiap-soat-tech-challenge-product-api-app
                port:
                  number: 8080

          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: fiap-soat-tech-challenge-customer-api-app
                port:
                  number: 8080

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: fiap-soat-tech-challenge-order-api-app
                port:
                  number: 8080

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: fiap-soat-tech-challenge-payment-api-app
                port:
                  number: 8080

#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: fiap-soat-tech-challenge-product-api-app
#                port:
#                  number: 8080
